--- a/info/templates/news/index.html
+++ b/info/templates/news/index.html
@@ -36,7 +36,7 @@
             <div class="user_login fr">
                 <img src="{% if data.user.avatar_url %} data.user.avatar_url {% else %}../../static/news/images/person01.png"{% endif %} class="lgin pic">
                 <a href=" ">{{ data.user.nick_name }}</a >
-                <a href="#">退出</a >
+                <a href="javascript:;" onclick="logout()">退出</a >
             </div>
         {% else %}
             {# 如果没有登录，则显示登录注册按钮 #}
